# axum-api-country

./: Cargo.toml  README.md
sql/: create_tables.sql  drop_tables.sql
sql/functions/: 00_on_update_function.sql
sql/schemas/: 00_regions.sql  01_subregions.sql  02_countries.sql  03_states.sql
src/: app.rs  db.rs  main.rs  service_register.rs
src/config/: config.rs  error.rs
src/models/: city.rs  country.rs  state.rs
src/repository/: base_postgres_repository.rs  city_repository.rs  country_repository.rs  mod.rs  state_repository.rs
src/repository/abstract/: dyn_city_repository.rs  dyn_country_repository.rs  dyn_state_repository.rs  error.rs  mod.rs
src/routes/: city_route.rs  country_route.rs  error.rs  mod.rs  skip.rs  state_route.rs
