[package]
name = "axum-countries"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version="1",features=["full"]}
axum = "0.7.5"
serde_json = "1.0"
serde = {version="1.0.200",features = ["derive"]}
tower-http = {version="0.5.2",features = ["fs"]}
tower-cookies = "0.10.0"
once_cell = "1.19.0"
chrono = { version = "0.4.*", features = ["serde"] }
sqlx = {version="0.7.4", features = ["postgres", "runtime-tokio-native-tls","macros","chrono","uuid","rust_decimal"]}
